# auditanalytics

./: .gitignore  CONVERSION_SUMMARY.md  MANIFEST.in  MIGRATION.md  MIGRATION_SUMMARY.md  README.md  README_PYTHON.md  __init__.py  example.py  pyproject.toml  requirements.txt  setup.py  utils.py
auditanalytics/: __init__.py
auditanalytics/analytics/: __init__.py
auditanalytics/core/: __init__.py  sampling.py  statistics.py
auditanalytics/data/: __init__.py  loaders.py
auditanalytics/notebooks/: README.md  ch_10_SOX.ipynb  ch_11_block_fraud.ipynb  ch_12_special.ipynb  ch_13_simulation.ipynb  ch_1_aud_fs.ipynb  ch_2_statistics_analytics.ipynb  ch_3_acct_transactions.ipynb  ch_4_planning.ipynb  ch_5_analytical_review_technical.ipynb  ch_6_analytical_review_intell.ipynb  ch_7_design_of_audit.ipynb  ch_8_interim_compliance.ipynb  ch_9_substantive.ipynb
auditanalytics/utils/: __init__.py  sampling.py
docs/: index.md
notebooks/: AR_confirmation_p285.ipynb  AR_p272.ipynb  ML_SOX_p354.ipynb  ML_compliance_p235.ipynb  accessing_edgar_p117.ipynb  accessing_edgar_p87.ipynb  blockchain_p389.ipynb  ch2_metrics_estimates.ipynb  ch4_sample_sizes.ipynb  inventory_p327.ipynb  metrics_estimates_p67.ipynb  ram_dashboard_p98.ipynb  sample_sizes_p103.ipynb  scan_curated_p159.ipynb  scan_uncurated_p155.ipynb  sent_analysis_p145.ipynb  simulation_p436.ipynb  stratified_MUS_p315.ipynb  supporting_evidence_p275.ipynb  tech_analysis_p131.ipynb  trial_balance_p272.ipynb  uncollectables_p287.ipynb  us_census_p127.ipynb  web_scraping_p166.ipynb
tests/: __init__.py  test_basic.py  test_loaders.py  test_sampling.py  test_statistics.py
