[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "auditanalytics"
version = "0.1.0"
description = "Audit Analytics: Data Science for the Accounting Profession - Python Edition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "J. Christopher Westland", email = "westland@uic.edu"}
]
keywords = ["audit", "analytics", "accounting", "statistics", "financial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "flake8>=4.0.0",
    "black>=22.0.0",
]
ml = [
    "tensorflow>=2.8.0",
    "torch>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/bsafabahar/auditanalytics"
Documentation = "https://github.com/bsafabahar/auditanalytics"
Repository = "https://github.com/bsafabahar/auditanalytics"

[tool.setuptools]
packages = ["auditanalytics", "auditanalytics.core", "auditanalytics.analytics", "auditanalytics.data", "auditanalytics.utils"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
